--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <title>课程机构列表 - 慕学在线网</title>
+    <title>课程机构列表 - Lighten</title>
     <link rel="stylesheet" type="text/css" href="/static/css/reset.css">
     <link rel="stylesheet" type="text/css" href="/static/css/animate.css">
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
@@ -21,31 +21,33 @@
             <div class="top">
                 <div class="wp">
                     <div class="fl"><p>服务电话：<b>33333333</b></p></div>
-                    <!--登录后跳转-->
-
-
-                    <a style="color:white" class="fr registerbtn" href="register.html">注册</a>
-                    <a style="color:white" class="fr loginbtn" href="/login/">登录</a>
-
-{#                    <div class="personal">#}
-{#                        <dl class="user fr">#}
-{#                            <dd>bobby<img class="down fr" src="/static/images/top_down.png"/></dd>#}
-{#                            <dt><img width="20" height="20" src="/static/media/image/2016/12/default_big_14.png"/></dt>#}
-{#                        </dl>#}
-{#                        <div class="userdetail">#}
-{#                            <dl>#}
-{#                                <dt><img width="80" height="80" src="/static/media/image/2016/12/default_big_14.png"/></dt>#}
-{#                                <dd>#}
-{#                                    <h2>django</h2>#}
-{#                                    <p>bobby</p>#}
-{#                                </dd>#}
-{#                            </dl>#}
-{#                            <div class="btn">#}
-{#                                <a class="personcenter fl" href="usercenter-info.html">进入个人中心</a>#}
-{#                                <a class="fr" href="/logout/">退出</a>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
+                    {% if not request.user.is_authenticated %}
+                        <a style="color:white" class="fr registerbtn" href="register.html">注册</a>
+                        <a style="color:white" class="fr loginbtn" href="/login/">登录</a>
+                    {% else %}
+                        <div class="personal">
+                            <dl class="user fr">
+                                <dd>bobby<img class="down fr" src="/static/images/top_down.png"/></dd>
+                                <dt><img width="20" height="20" src="/static/media/image/2016/12/default_big_14.png"/>
+                                </dt>
+                            </dl>
+                            <div class="userdetail">
+                                <dl>
+                                    <dt><img width="80" height="80"
+                                             src="/static/media/image/2016/12/default_big_14.png"/>
+                                    </dt>
+                                    <dd>
+                                        <h2>django</h2>
+                                        <p>bobby</p>
+                                    </dd>
+                                </dl>
+                                <div class="btn">
+                                    <a class="personcenter fl" href="usercenter-info.html">进入个人中心</a>
+                                    <a class="fr" href="/logout/">退出</a>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
 
 
                 </div>
