--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
 </head>
 <body>
+
 <div class="dialog" id="jsDialog">
     <!--提示弹出框-->
     <div class="successbox dialogbox" id="jsSuccessTips">
@@ -37,6 +38,7 @@
     </div>
 </div>
 <div class="bg" id="dialogBg"></div>
+
 <header>
     <div class="c-box fff-box">
         <div class="wp header-box">
@@ -49,6 +51,7 @@
         </div>
     </div>
 </header>
+
 <section>
     <div class="c-box bg-box">
         <div class="login-box clearfix">
@@ -57,6 +60,7 @@
                 <h1>用户登录</h1>
                 <a class="index-font" href="index.html">回到首页</a>
             </div>
+
             <div class="fl slide">
                 <div class="imgslide">
                     <ul class="imgs">
@@ -68,26 +72,33 @@
                 <div class="unslider-arrow prev"></div>
                 <div class="unslider-arrow next"></div>
             </div>
+
             <div class="fl form-box">
                 <h2>帐号登录</h2>
-                <form action="/login/" method="post" autocomplete="off">
-                    <div class="form-group marb20 {% if form.errors.username %}errorput{% endif %}">
+                <form action="{% url 'login' %}" method="post" autocomplete="off">
+                    <div class="form-group marb20 {% if login_form.errors.username %}errorput{% endif %}">
                         <label>用&nbsp;户&nbsp;名</label>
                         <input name="username" id="account_l" type="text" placeholder="手机号/邮箱"/>
                     </div>
-                    <div class="form-group marb8 {% if form.errors.password %}errorput{% endif %}">
+
+                    <div class="form-group marb8 {% if login_form.errors.password %}errorput{% endif %}">
                         <label>密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</label>
                         <input name="password" id="password_l" type="password" placeholder="请输入您的密码"/>
                     </div>
-                    <div class="error btns login-form-tips" id="jsLoginTips">{% for key,error in form.errors.items %}{{ error }}{{ msg }}{% endfor %}</div>
-                    <div class="auto-box marb38">
 
+                    <div class="error btns login-form-tips" id="jsLoginTips">
+                        {# 表单验证错误提示 #}
+                        {% for error in login_form.errors.values %}{{ error }}{% endfor %}
+                        {{ msg }}
+                    </div>
+                    <div class="auto-box marb38">
                         <a class="fr" href="forgetpwd.html">忘记密码？</a>
                     </div>
+
                     <input class="btn btn-green" id="jsLoginBtn" type="submit" value="立即登录 > "/>
                     {% csrf_token %}
                 </form>
-                <p class="form-p">没有慕学在线网帐号？<a href="register.html">[立即注册]</a></p>
+                <p class="form-p">没有慕学在线网帐号？<a href="{% url 'register' %}">[立即注册]</a></p>
             </div>
         </div>
     </div>
