--- a/templates/register.html
+++ b/templates/register.html
@@ -136,7 +136,7 @@
                 <!--</div>-->
                 <div class="tab-form">
                     <form id="email_register_form" method="post" action="{% url 'register' %}" autocomplete="off">
-                        <div class="form-group marb20 errorput {% if register_form.errors.email %}errorput{% endif %}">
+                        <div class="form-group marb20 {% if register_form.errors.email %}errorput{% endif %}">
                             <label>邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱</label>
                             <input  type="text" id="id_email" name="email" value="{{ register_form.email.value }}" placeholder="请输入您的邮箱地址" />
                         </div>
@@ -154,6 +154,7 @@
                         <div class="error btns" id="jsEmailTips">
                             {# 表单验证错误提示 #}
                             {% for error in register_form.errors.values %}{{ error }}{% endfor %}
+                            {{ msg }}
                         </div>
 
                         <div class="auto-box marb8">
