--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
 
             <div class="middle">
                 <div class="wp">
-                    <a href="index.html"><img class="fl" src="{% static 'images/logo.jpg' %}"/></a>
+                    <a href="{% url 'index' %}"><img class="fl" src="{% static 'images/logo.jpg' %}"/></a>
                     <div class="searchbox fr">
                         <div class="selectContainer fl">
                             <span class="selectOption" id="jsSelectOption" data-value="course">
@@ -80,7 +80,7 @@
                 <div class="nav">
                     <div class="wp">
                         <ul>
-                            <li class="active"><a href="index.html">首页</a></li>
+                            <li class="active"><a href="{% url 'index' %}">首页</a></li>
                             <li>
                                 <a href="course-list.html">
                                     公开课<img class="hot" src="{% static 'images/nav_hot.png' %}">
@@ -89,7 +89,7 @@
                             <li>
                                 <a href="teachers-list.html">授课教师</a>
                             </li>
-                            <li><a href="org-list.html">授课机构</a></li>
+                            <li><a href="{% url 'org_list' %}">授课机构</a></li>
                         </ul>
                     </div>
                 </div>
@@ -330,7 +330,7 @@
                 <div class="module3_1 left">
                     <img width="228" height="463" src="{% static 'images/module3_1.jpg' %}"/>
                     <p class="fisrt_word">名校来袭<br/>权威认证</p>
-                    <a class="more" href="org-list.html">查看更多机构 ></a>
+                    <a class="more" href="{% url 'org_list' %}">查看更多机构 ></a>
                 </div>
                 <div class="right">
                     <ul>
