--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -27,23 +27,23 @@
                             <h2>机构类别</h2>
                             <div class="cont">
                                 <a href="?city="><span class="active2">全部</span></a>
-
                                 <a href="?ct=pxjg&city="><span class="">培训机构</span></a>
-
                                 <a href="?ct=gx&city="><span class="">高校</span></a>
-
                                 <a href="?ct=gr&city="><span class="">个人</span></a>
-
                             </div>
                         </li>
                         <li>
                             <h2>所在地区</h2>
                             <div class="more">更多</div>
                             <div class="cont">
-                                <a href="?ct="><span class="active2">全部</span></a>
+                                <a href="?ct="><span{% if cur_city_id == '' %} class="active2"{% endif %}>全部</span></a>
                                 {# 城市列表 #}
                                 {% for city in all_cities %}
-                                    <a href="?city=1&ct="><span class="">{{ city }}</span></a>
+                                    <a href="?city={{ city.id }}">
+                                        <span{% if cur_city_id == city.id|stringformat:'i' %} class="active2"{% endif %}>
+                                            {{ city }}
+                                        </span>
+                                    </a>
                                 {% endfor %}
                             </div>
                         </li>
