--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -54,9 +54,11 @@
                     <div class="layout">
                         <div class="head">
                             <ul class="tab_header">
-                                <li class="active"><a href="?ct=&city=">全部</a></li>
-                                <li class=""><a href="?sort=students&ct=&city=">学习人数 &#8595;</a></li>
-                                <li class=""><a href="?sort=courses&ct=&city=">课程数 &#8595;</a></li>
+                                <li{% if sort == '' %} class="active"{% endif %}><a href="?ct={{ category }}&city={{ cur_city_id }}">全部</a></li>
+                                <li{% if sort == 'students' %} class="active"{% endif %}><a href="?sort=students&ct={{ category }}&city={{ cur_city_id }}">
+                                    学习人数 &#8595;</a></li>
+                                <li{% if sort == 'courses' %} class="active"{% endif %}><a href="?sort=courses&ct={{ category }}&city={{ cur_city_id }}">
+                                    课程数 &#8595;</a></li>
                             </ul>
                         </div>
                         {# 机构列表 #}
