--- a/templates/base.html
+++ b/templates/base.html
@@ -46,49 +46,51 @@
                 </div>
             </div>
 
-            <div class="middle">
-                <div class="wp">
-                    <a href="{% url 'index' %}"><img class="fl" src="{% static 'images/logo.jpg' %}"/></a>
-                    <div class="searchbox fr">
-                        <div class="selectContainer fl">
+            {# 搜索框与导航 #}
+            {% block head_middle_nav %}
+                <div class="middle">
+                    <div class="wp">
+                        <a href="{% url 'index' %}"><img class="fl" src="{% static 'images/logo.jpg' %}"/></a>
+                        <div class="searchbox fr">
+                            <div class="selectContainer fl">
                             <span class="selectOption" id="jsSelectOption" data-value="course">
                                 公开课
                             </span>
-                            <ul class="selectMenu" id="jsSelectMenu">
-                                <li data-value="course">公开课</li>
-                                <li data-value="org">课程机构</li>
-                                <li data-value="teacher">授课老师</li>
+                                <ul class="selectMenu" id="jsSelectMenu">
+                                    <li data-value="course">公开课</li>
+                                    <li data-value="org">课程机构</li>
+                                    <li data-value="teacher">授课老师</li>
+                                </ul>
+                            </div>
+                            <input id="search_keywords" class="fl" type="text" value="" placeholder="请输入搜索内容"/>
+                            <img class="search_btn fr" id="jsSearchBtn" src="{% static 'images/search_btn.png' %}"/>
+                        </div>
+                    </div>
+                </div>
+
+                <nav>
+                    <div class="nav">
+                        <div class="wp">
+                            <ul>
+                                <li><a href="{% url 'index' %}">首页</a></li>
+                                <li>
+                                    <a href="course-list.html">
+                                        公开课<img class="hot" src="{% static 'images/nav_hot.png' %}">
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="teachers-list.html">授课教师</a>
+                                </li>
+                                <li class="active"><a href="{% url 'org:org_list' %}">授课机构</a></li>
                             </ul>
                         </div>
-                        <input id="search_keywords" class="fl" type="text" value="" placeholder="请输入搜索内容"/>
-                        <img class="search_btn fr" id="jsSearchBtn" src="{% static 'images/search_btn.png' %}"/>
                     </div>
-                </div>
-            </div>
-
-            <nav>
-                <div class="nav">
-                    <div class="wp">
-                        <ul>
-                            <li><a href="{% url 'index' %}">首页</a></li>
-                            <li>
-                                <a href="course-list.html">
-                                    公开课<img class="hot" src="{% static 'images/nav_hot.png' %}">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="teachers-list.html">授课教师</a>
-                            </li>
-                            <li class="active"><a href="{% url 'org:org_list' %}">授课机构</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-
+                </nav>
+            {% endblock %}
+            {# 搜索框与导航 #}
         </div>
     </header>
 </section>
-<!--crumbs start-->
 
 {# custom_bread #}
 {% block custom_bread %}
@@ -106,28 +108,34 @@
 {% block content %}{% endblock %}
 {# content #}
 
-<footer>
-    <div class="footer">
-        <div class="wp">
-            <ul class="cont">
-                <li class="logo"><a href=""><img src="{% static 'images/footlogo.png' %}"/></a></li>
-                <li class="code"><img src="{% static 'images/code.jpg' %}"/>
-                    <p class="center">扫描关注微信</p></li>
-                <li class="third"><img class="fl" src="{% static 'images/tell.png' %}"/>
-                    <p class="tell">33333333</p>
-                    <p class="time">周一至周日 9:00-18:00</p></li>
-            </ul>
+{# footer #}
+{% block footer %}
+    <footer>
+        <div class="footer">
+            <div class="wp">
+                <ul class="cont">
+                    <li class="logo"><a href=""><img src="{% static 'images/footlogo.png' %}"/></a></li>
+                    <li class="code"><img src="{% static 'images/code.jpg' %}"/>
+                        <p class="center">扫描关注微信</p></li>
+                    <li class="third"><img class="fl" src="{% static 'images/tell.png' %}"/>
+                        <p class="tell">33333333</p>
+                        <p class="time">周一至周日 9:00-18:00</p></li>
+                </ul>
 
+            </div>
+            <p class="line"></p>
+            <div class="wp clear">
+                <span class="fl">? 2016 www.projectsedu.com 慕学在线-在线学习交流平台 保留所有权利</span>
+                <span class="fr">copyright ? 2016 ICP备案证书号：蜀ICP备xxxxx号-1</span>
+            </div>
         </div>
-        <p class="line"></p>
-        <div class="wp clear">
-            <span class="fl">? 2016 www.projectsedu.com 慕学在线-在线学习交流平台 保留所有权利</span>
-            <span class="fr">copyright ? 2016 ICP备案证书号：蜀ICP备xxxxx号-1</span>
-        </div>
-    </div>
-</footer>
+    </footer>
+{% endblock %}
+{# footer #}
 
-<section>
+{# sidebar #}
+{% block sidebar %}
+    <section>
     <ul class="sidebar">
         <li class="qq">
             <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=2023525077&site=qq&menu=yes"></a>
@@ -135,6 +143,8 @@
         <li class="totop"></li>
     </ul>
 </section>
+{% endblock %}
+{# sidebar #}
 
 <script src="{% static 'js/selectUi.js' %}" type='text/javascript'></script>
 <script src="{% static 'js/deco-common.js' %}" type='text/javascript'></script>
