新增：org_detail_base.html 机构详情base页
修改: teacher model新增字段image
      4个机构详情页完成

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,15 +9,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <title>
         Lighten -
-
         {# title #}
         {% block title %}{% endblock %}
         {# title #}
-
     </title>
+
     <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'js/plugins/queryCity/css/cityLayout.css' %}">
 
     {# custom_css #}
     {% block custom_css %}{% endblock %}
@@ -154,6 +154,7 @@
 <script src="{% static 'js/unslider.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/plugins/jquery.scrollLoading.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/deco-common.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/plugins/jquery.raty.js' %}" type="text/javascript"></script>
 
 {# custom_js #}
 {% block custom_js %}{% endblock %}
