--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -65,33 +65,30 @@
                         {% for org in org_paginator.object_list %}
                             <dl class="des difdes">
                             <dt>
-                                <a href="org-detail-homepage.html">
+                                <a href="{% url 'org:org_home' org.id %}">
                                     <img width="200" height="120" class="scrollLoading"
                                          data-url="{{ MEDIA_URL }}{{ org.image }}"/>
                                 </a>
                             </dt>
                             <dd>
                                 <div class="clearfix">
-                                    <a href="org-detail-homepage.html">
-                                        <h1>慕课网</h1>
+                                    <a href="{% url 'org:org_home' org.id %}">
+                                        <h1>{{ org.name }}</h1>
                                         <div class="pic fl">
-
                                             <img src="{% static 'images/authentication.png' %}"/>
-
                                             <img src="{% static 'images/gold.png' %}"/>
-
                                         </div>
                                     </a>
                                 </div>
                                 <ul class="cont">
-                                    <li class="first"><p class="pic9">课程数：<span>1</span></p>
-                                        <p class="c7">学习人数：<span>1000</span></p></li>
-                                    <li class="c8" style="padding-left:18px;">北京市海淀区中关村北大街</li>
+                                    <li class="first"><p class="pic9">课程数：<span>{{ org.course_nums }}</span></p>
+                                        <p class="c7">学习人数：<span>{{ org.student_nums }}</span></p></li>
+                                    <li class="c8" style="padding-left:18px;">{{ org.address }}</li>
                                     <li class="pic10" style="padding-left:18px;">经典课程：
 
-                                        <a href="/diary/19/">c语言基础入门</a>
+                                        <a href="/diary/19/">需要填充</a>
 
-                                        <a href="/diary/16/">数据库基础</a>
+                                        <a href="/diary/16/">需要填充</a>
 
                                     </li>
                                 </ul>
