新增：用户收藏授课机构功能

--- a/templates/org_detail_base.html
+++ b/templates/org_detail_base.html
@@ -23,7 +23,7 @@
             </div>
             <div class="btn fr collectionbtn  notlogin
                  " data-favid="22" data-fav-type="1">
-                收藏
+                {% if has_fav %}已{% endif %}收藏
             </div>
         </div>
     </div>
@@ -85,29 +85,29 @@
             $.ajax({
                 cache: false,
                 type: "POST",
-                url: "/org/add_fav/",
+                url: "{% url 'org:add_fav' %}",
                 data: {'fav_id': fav_id, 'fav_type': fav_type},
                 async: true,
                 beforeSend: function (xhr, settings) {
-                    xhr.setRequestHeader("X-CSRFToken", "5I2SlleZJOMUX9QbwYLUIAOshdrdpRcy");
+                    xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
                 },
                 success: function (data) {
                     if (data.status == 'fail') {
                         if (data.msg == '用户未登录') {
-                            window.location.href = "login.html";
+                            window.location.href = "/login/";
                         } else {
-                            alert(data.msg)
+                            current_elem.text(data.msg)
                         }
 
                     } else if (data.status == 'success') {
                         current_elem.text(data.msg)
                     }
-                },
+                }
             });
         }
 
         $('.collectionbtn').on('click', function () {
-            add_fav($(this), 1, 2);
+            add_fav($(this), {{ course_org.id }}, 2);
         });
 
         $(function () {
