新增：课程机构->机构首页 查看更多功能

--- a/templates/org-detail-homepage.html
+++ b/templates/org-detail-homepage.html
@@ -9,8 +9,8 @@
 {% block org_detail_right %}
     <div class="right companycenter layout grouping">
         <div class="head">
-            <h1>全部课程</h1>
-            <a class="green fr more" href="org-detail-course.html">查看更多 > </a>
+            <h1>经典课程</h1>
+            <a class="green fr more" href="{% url 'org:org_course' course_org.id %}">查看更多 > </a>
         </div>
         <div class="brief group_list">
 
@@ -36,7 +36,7 @@
     <div class="right companycenter layout">
         <div class="head">
             <h1>机构教师</h1>
-            <a class="green fr more" href="org-detail-teachers.html">查看更多 > </a>
+            <a class="green fr more" href="{% url 'org:org_teacher' course_org.id %}">查看更多 > </a>
         </div>
 
         {% for teacher in all_teachers %}
@@ -65,7 +65,7 @@
     <div class="right companycenter layout">
         <div class="head">
             <h1>机构介绍</h1>
-            <a class="green fr more" href="org-detail-desc.html">查看更多 ></a>
+            <a class="green fr more" href="{% url 'org:org_desc' course_org.id %}">查看更多 ></a>
         </div>
         <div class="cont">
             {{ course_org.desc }}
