--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@
                             <ul>
                                 <li><a href="{% url 'index' %}">首页</a></li>
                                 <li>
-                                    <a href="course-list.html">
+                                    <a href="{% url 'course:course_list' %}">
                                         公开课<img class="hot" src="{% static 'images/nav_hot.png' %}">
                                     </a>
                                 </li>
@@ -121,6 +121,7 @@
         <div class="wp">
             <ul class="crumbs">
                 <li><a href="{% url 'index' %}">首页</a>></li>
+                {% block custom_bread_tail %}{% endblock %}
             </ul>
         </div>
     </section>
@@ -169,6 +170,7 @@
 {% endblock %}
 {# sidebar #}
 
+{# all #}
 <script src="{% static 'js/selectUi.js' %}" type='text/javascript'></script>
 <script src="{% static 'js/deco-common.js' %}" type='text/javascript'></script>
 <script src="{% static 'js/plugins/laydate/laydate.js' %}" type="text/javascript"></script>
@@ -178,6 +180,9 @@
 <script src="{% static 'js/plugins/jquery.scrollLoading.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/deco-common.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/plugins/jquery.raty.js' %}" type="text/javascript"></script>
+{# course-list #}
+<script src="{% static 'js/plugins/jquery.scrollLoading.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/deco-common.js' %}" type="text/javascript"></script>
 
 {# custom_js #}
 {% block custom_js %}{% endblock %}
