--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -6,15 +6,8 @@
     课程机构列表
 {% endblock %}
 
-{% block custom_bread %}
-    <section>
-        <div class="wp">
-            <ul class="crumbs">
-                <li><a href="{% url 'index' %}">首页</a>></li>
-                <li>课程机构</li>
-            </ul>
-        </div>
-    </section>
+{% block custom_bread_tail %}
+    <li>课程机构</li>
 {% endblock %}
 
 {% block content %}
