--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
 
 <body>
 
+{# 登陆栏、搜索、导航条 #}
 <section class="headerwrap ">
     <header>
         <div class=" header">
@@ -95,16 +96,18 @@
                     <div class="nav">
                         <div class="wp">
                             <ul>
-                                <li><a href="{% url 'index' %}">首页</a></li>
-                                <li>
+                                <li class="{% if not current_page %}active{% endif %}">
+                                    <a href="{% url 'index' %}">首页</a>
+                                </li>
+                                <li class="{% if current_page == 'course_list' %}active{% endif %}">
                                     <a href="{% url 'course:course_list' %}">
                                         公开课<img class="hot" src="{% static 'images/nav_hot.png' %}">
                                     </a>
                                 </li>
-                                <li>
+                                <li class="{% if current_page == 'teacher_list' %}active{% endif %}">
                                     <a href="teachers-list.html">授课教师</a>
                                 </li>
-                                <li class="active"><a href="{% url 'org:org_list' %}">授课机构</a></li>
+                                <li class="{% if current_page == 'org_list' %}active{% endif %}"><a href="{% url 'org:org_list' %}">授课机构</a></li>
                             </ul>
                         </div>
                     </div>
