新增：热门课程推荐

--- a/templates/course-list.html
+++ b/templates/course-list.html
@@ -14,12 +14,14 @@
     <section>
         <div class="wp">
             <div class="list" style="margin-top:0;">
+                {# 最新课程 #}
                 <div class="left layout">
                     <div class="head">
                         <ul class="tab_header">
                             <li class="{% if sort == '' %}active{% endif %}"><a href="?sort=">最新 </a></li>
                             <li class="{% if sort == 'hot' %}active{% endif %}"><a href="?sort=hot">最热门</a></li>
-                            <li class="{% if sort == 'students' %}active{% endif %}"><a href="?sort=students">参与人数</a></li>
+                            <li class="{% if sort == 'students' %}active{% endif %}"><a href="?sort=students">参与人数</a>
+                            </li>
                         </ul>
                     </div>
                     <div id="inWindow">
@@ -40,7 +42,8 @@
                                             <span class="fr">学习人数：{{ course.students }}&nbsp;&nbsp;</span>
                                         </div>
                                         <div class="bottom">
-                                            <a href="course-detail.html"><span class="fl">来自{{ course.course_org.name }}</span></a>
+                                            <a href="course-detail.html"><span
+                                                    class="fl">来自{{ course.course_org.name }}</span></a>
                                             <span class="star fr  notlogin
                                         " data-favid="15">
                                         {{ course.fav_nums }}
@@ -49,7 +52,7 @@
                                     </div>
                                 {% endfor %}
                             </div>
-                        
+
                             {# 分页 #}
                             {% load i18n %}
                             <div class="pageturn">
@@ -94,23 +97,24 @@
                     </div>
                 </div>
 
+                {# 热门课程推荐 #}
                 <div class="right layout">
                     <div class="head">热门课程推荐</div>
                     <div class="group_recommend">
-
-                        <dl>
-                            <dt>
-                                <a target="_blank" href="">
-                                    <img width="240" height="220" class="scrollLoading"
-                                         src="{% static 'media/courses/2016/11/540e57300001d6d906000338-240-135_n0L8vbw.jpg' %}"/>
-                                </a>
-                            </dt>
-                            <dd>
-                                <a target="_blank" href=""><h2> django与vuejs实战项目2</h2></a>
-                                <span class="fl">难度：<i class="key">高级</i></span>
-                            </dd>
-                        </dl>
-
+                        {% for hot_course in hot_courses %}
+                            <dl>
+                                <dt>
+                                    <a target="_blank" href="">
+                                        <img width="240" height="220" class="scrollLoading"
+                                             src="{{ MEDIA_URL }}{{ hot_course.image }}"/>
+                                    </a>
+                                </dt>
+                                <dd>
+                                    <a target="_blank" href=""><h2> {{ hot_course.name }}</h2></a>
+                                    <span class="fl">难度：<i class="key">{{ hot_course.get_degree_display }}</i></span>
+                                </dd>
+                            </dl>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
