--- a/templates/course-detail.html
+++ b/templates/course-detail.html
@@ -54,7 +54,9 @@
                                 <div class="btn colectgroupbtn" id="jsLeftBtn">
                                     {% if course_has_fav %}已{% endif %}收藏
                                 </div>
-                                <div class="buy btn"><a style="color: white" href="course-video.html">开始学习</a></div>
+                                <div class="buy btn">
+                                    <a style="color: white" href="{% url 'course:info' course.id %}">开始学习</a>
+                                </div>
                             </div>
                         </div>
                         <div class="group-share-box">
