--- a/templates/course-video.html
+++ b/templates/course-video.html
@@ -155,22 +155,14 @@
                                          style="display: block">
                                         <!-- img 200 x 112 -->
                                         <ul class="other-list">
-
-                                            <li class="curr">
-                                                <a href="course-detail.html" target="_blank">
-                                                    <img src="{% static 'media/courses/2016/11/540e57300001d6d906000338-240-135_n0L8vbw.jpg"
-                                                     alt=" django与vuejs实战项目2">
-                                                    <span class="name autowrap">django与vuejs实战项目2</span>
-                                                </a>
-                                            </li>
-
-                                            <li class="curr">
-                                                <a href="course-detail.html" target="_blank">
-                                                    <img src="{% static 'media/courses/2016/12/python面向对象.jpg" alt="python面向对象">
-                                                <span class=" name autowrap">python面向对象</span>
-                                                </a>
-                                            </li>
-
+                                            {% for course in relate_courses %}
+                                                <li class="curr">
+                                                    <a href="{% url 'course:detail' course.id %}">
+                                                        <img src="{{ MEDIA_URL }}{{ course.image }}" alt="{{ course.name }}">
+                                                        <span class="name autowrap">{{ course.name }}</span>
+                                                    </a>
+                                                </li>
+                                            {% endfor %}
                                         </ul>
                                     </div>
                                     <div class="cp-tab-pannel js-comp-tab-pannel" data-pannel="plan">
